--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
           </p>
 
           <div class="botoes">
+            <button><i class="fa-solid fa-play"></i> Continuar</button>
 
+            <button><i class="fa-solid fa-star"></i> Favorito</button>
           </div>
-          
+
         </p>
 
       </div>
