--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
       integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
+
   </head>
   <body>
 
@@ -90,6 +95,35 @@
       </div>
     </section>
 
+    <section class="momentos">
+      <h2>Nossos Melhores Momentos:</h2>
+
+      <!--Swiper de fotos-->
+      <div class="swiper">
+
+        <div class="swiper-wrapper">
+
+          <div class="swiper-slide"><img src="inserts/Foto1.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/Foto2.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/Foto3.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/Foto4.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto5.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/Foto6.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/Foto9.jpeg" alt></div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+    <footer>
+      2025 - Davi Gerson - todos os direitos reservados
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+
   </body>
 </html>
