--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
 
+    <link rel="shortcut icon" href="inserts/favicon.ico" type="image/x-icon">
+
   </head>
   <body>
 
