--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
         <div class="swiper-wrapper">
 
           <div class="swiper-slide"><img src="inserts/Foto1.jpeg" alt></div>
-          <div class="swiper-slide"><img src="inserts/Foto2.jpeg" alt></div>
-          <div class="swiper-slide"><img src="inserts/Foto3.jpeg" alt></div>
-          <div class="swiper-slide"><img src="inserts/Foto4.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto2.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto3.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto4.jpeg" alt></div>
           <div class="swiper-slide"><img src="inserts/foto5.jpeg" alt></div>
-          <div class="swiper-slide"><img src="inserts/Foto6.jpeg" alt></div>
-          <div class="swiper-slide"><img src="inserts/Foto9.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto6.jpeg" alt></div>
+          <div class="swiper-slide"><img src="inserts/foto9.jpeg" alt></div>
 
         </div>
 
