--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
           </p>
 
           <div class="botoes">
-            <button><i class="fa-solid fa-play"></i> Continuar</button>
+            <button><i class="fa-solid fa-play"
+                style="color: rgba(30,48,80);"></i> Continuar</button>
 
-            <button><i class="fa-solid fa-star"></i> Favorito</button>
+            <button><i class="fa-solid fa-star" style=" color:
+                rgba(30,48,80);"></i> Favorito</button>
           </div>
 
         </p>
