criado pagina inicial

--- a/pages/Aniversario/24Anos/24Anos.html
+++ b/pages/Aniversario/24Anos/24Anos.html
@@ -46,7 +46,7 @@
 
           <ul class="dropdown-menu">
             <li><a class="dropdown-item"
-                href="pages/Aniversario/Aniversarios.html">Aniverários</a></li>
+                href="../Aniversarios.html">Aniverários</a></li>
             <li><a class="dropdown-item" href="#">Aniversários de
                 Namoro</a></li>
             <li><a class="dropdown-item" href="#">Aniversários de
