--- a/index.html
+++ b/index.html
@@ -1,125 +1,171 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Presente July Amor - Netflix Style</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Presente July Amor - Estilo Netflix</title>
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Great+Vibes&display=swap" rel="stylesheet">
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
-      rel="stylesheet" />
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
 
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      rel="stylesheet" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
+  <!-- Seu CSS personalizado -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <link rel="stylesheet" href="style.css">
+<body>
 
-  </head>
-  <body>
-
-    <header>
-      <div class="logo">
-        <img src="inserts/Netflix-1.gif" alt="Logo" />
-      </div>
-      <nav>
-        <a href="#">Início</a>
-        <a href="#">Séries</a>
-        <a href="#">Filmes</a>
-        <a href="#">Minha Lista</a>
-      </nav>
-    </header>
-
-    <!-- Aniversários -->
-    <section>
-      <h2 class="section-title">Aniversários</h2>
-      <div class="swiper aniversarios-swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <a href="pages/Aniversario/24Anos/24Anos.html" class="card-link">
-              <div class="card-swiper">
-                <img src="inserts/foto9.jpeg" alt="Aniversário Juliana" />
-                <div class="card-title">Juliana Vitória - 24 anos</div>
-              </div>
-            </a>
-          </div>
+  <!-- Cabeçalho -->
+  <header class="cabecalho">
+    <div class="logo">
+      <img src="inserts/Netflix-1.gif" alt="Logo Netflix" />
+    </div>
+    <nav>
+      <a href="#">Início</a>
+      <div class="dropdown">
+        <a class="dropdown-toggle" href="#" data-bs-toggle="dropdown">Séries</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Aniversários</a>
+          <a class="dropdown-item" href="#">Namoro</a>
+          <a class="dropdown-item" href="#">Casamento</a>
         </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
       </div>
-    </section>
+      <a href="#">Filmes</a>
+      <a href="#">Minha Lista</a>
+    </nav>
+  </header>
 
-    <!-- Aniversários de Namoro -->
-    <section>
-      <h2 class="section-title">Aniversários de Namoro</h2>
-      <div class="swiper namoro-swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <a href="namoro/1ano.html" class="card-link">
-              <div class="card-swiper">
-                <img src="inserts/Foto1.jpeg" alt="Namoro Juliana e Davi" />
-                <div class="card-title">Juliana & Davi - 1 ano</div>
-              </div>
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <a href="namoro/primeiro-encontro.html" class="card-link">
-              <div class="card-swiper">
-                <img src="inserts/Juliana_Davi_Namoro2.jpg"
-                  alt="Namoro Juliana e Davi" />
-                <div class="card-title">1º Encontro</div>
-              </div>
-            </a>
-          </div>
+  <!-- Banner Principal -->
+  <section class="banner">
+    <div class="conteudo">
+      <p class="titulo">Juliana Vitória</p>
+      <p class="detalhes">
+        01 DE NOVEMBRO, 24 TEMPORADAS <br />
+        <span class="stars">
+          <i class="fa-solid fa-star" style="color: #ff0000;"></i>
+          <i class="fa-solid fa-star" style="color: #ff0000;"></i>
+          <i class="fa-solid fa-star" style="color: #ff0000;"></i>
+          <i class="fa-solid fa-star" style="color: #ff0000;"></i>
+          <i class="fa-solid fa-star" style="color: #ff0000;"></i>
+        </span>
+      </p>
+      <p class="descricao">
+        Juliana, protagonista da história mais linda de amor. Davi, seu noivo, celebra cada temporada com paixão e carinho. Essa história ainda está sendo escrita, com um final garantidamente feliz. ❤️✨
+      </p>
+      <div class="botoes">
+        <button><i class="fa-solid fa-play"></i> Assistir</button>
+        <button><i class="fa-solid fa-star"></i> Favoritar</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Swiper - Aniversários -->
+  <section class="momentos">
+    <h2>Aniversários</h2>
+    <div class="swiper aniversarios-swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="pages/Aniversario/Aniversarios.html" class="card-link">
+            <img src="inserts/foto9.jpeg" alt="Aniversário Juliana" />
+            <div class="card-title">Juliana - 24 anos</div>
+          </a>
         </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
       </div>
-    </section>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+  </section>
 
-    <!-- Aniversários de Casamento -->
-    <section>
-      <h2 class="section-title">Aniversários de Casamento</h2>
-      <div class="swiper casamento-swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <a href="casamento/futuro.html" class="card-link">
-              <div class="card-swiper">
-                <img src="inserts/Casamento_Futuro.jpg"
-                  alt="Futuro Casamento" />
-                <div class="card-title">Futuro Casamento - 2026</div>
-              </div>
-            </a>
-          </div>
+  <!-- Swiper - Namoro -->
+  <section class="momentos">
+    <h2>Aniversários de Namoro</h2>
+    <div class="swiper namoro-swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="#" class="card-link">
+            <img src="inserts/Foto1.jpeg" alt="1 ano de namoro" />
+            <div class="card-title">1 Ano de Namoro</div>
+          </a>
         </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-slide">
+          <a href="#" class="card-link">
+            <img src="inserts/Juliana_Davi_Namoro2.jpg" alt="1º Encontro" />
+            <div class="card-title">1º Encontro</div>
+          </a>
+        </div>
       </div>
-    </section>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+  </section>
 
-    <footer>
-      2025 - Davi Gerson - todos os direitos reservados
-    </footer>
+  <!-- Swiper - Casamento -->
+  <section class="momentos">
+    <h2>Aniversários de Casamento</h2>
+    <div class="swiper casamento-swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="#" class="card-link">
+            <img src="inserts/Casamento_Futuro.jpg" alt="Casamento 2026" />
+            <div class="card-title">Futuro Casamento - 2026</div>
+          </a>
+        </div>
+      </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+  </section>
 
-    <!-- Scripts Bootstrap e Swiper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <!-- Rodapé -->
+  <footer>
+    © 2025 - Davi Gerson para Juliana Vitória 💖 Todos os direitos reservados
+  </footer>
 
-    <script src="script.js"></script>
-  </body>
+  <!-- Swiper & JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <script>
+    function createSwiper(selector) {
+      return new Swiper(selector, {
+        slidesPerView: 3,
+        spaceBetween: 20,
+        loop: true,
+        navigation: {
+          nextEl: selector + " .swiper-button-next",
+          prevEl: selector + " .swiper-button-prev",
+        },
+        breakpoints: {
+          0: {
+            slidesPerView: 1,
+            spaceBetween: 10,
+          },
+          480: {
+            slidesPerView: 2,
+            spaceBetween: 15,
+          },
+          768: {
+            slidesPerView: 3,
+            spaceBetween: 20,
+          },
+          1024: {
+            slidesPerView: 4,
+            spaceBetween: 30,
+          },
+        },
+        autoplay: {
+          delay: 4000,
+          disableOnInteraction: false,
+        },
+      });
+    }
+
+    createSwiper(".aniversarios-swiper");
+    createSwiper(".namoro-swiper");
+    createSwiper(".casamento-swiper");
+  </script>
+</body>
 </html>
