--- a/pages/AniversariosNamoro/5anos/5Anos.html
+++ b/pages/AniversariosNamoro/5anos/5Anos.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="24Anos.css">
+    <link rel="stylesheet" href="5Anos.css">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
@@ -32,11 +32,12 @@
 
     <header class="cabecalho">
       <div class="logo">
-        <img src="../../../inserts/Netflix-1.gif" class="logo" alt width="50px">
+        <img src="../../../../inserts/Netflix-1.gif" class="logo" alt
+          width="50px">
       </div>
 
       <nav>
-        <a href="../../../index.html">Início</a>
+        <a href="../../../../index.html">Início</a>
 
         <div class="dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button"
@@ -65,11 +66,11 @@
     <!--Conteúdo do Site-->
     <section class="banner">
       <div class="conteudo">
-        <p class="titulo">Juliana Vitória</p>
+        <p class="titulo">Nosso Aniversário de namoro</p>
 
         <p class="detalhes">
           <span>
-            01 DE NOVEMBRO, 24 TEMPORADAS
+            20 DE AGOSTO, 5 TEMPORADAS
           </span>
 
           <span class="stars">
@@ -82,32 +83,29 @@
 
           <p class="descricao">
 
-            No dia 01 de novembro, Juliana completa 24 anos. Mas essa não é
-            apenas a história de mais um aniversário. É a história de uma mulher
-            incrível que, mesmo ainda não morando com o amor da sua vida, já
-            divide com ele todos os sonhos, promessas e planos para um futuro
-            juntos.
+            Hoje celebramos 5 anos de namoro. Mas essa não é apenas a história
+            de mais um dia no calendário. É a história de um amor que cresceu,
+            se fortaleceu e se tornou a base de tantas memórias, sonhos e planos
+            para um futuro juntos.
 
-            Davi, seu noivo apaixonado, sabe que Juliana não é apenas a
-            protagonista dessa trama — ela é o motivo, o coração, a razão de
-            cada capítulo. Ela é a luz que ilumina seus dias, a força que o
-            inspira, a doçura que acalma, e o desejo que o move.
+            Juliana, sua namorada apaixonada, sabe que Davi não é apenas parte
+            da sua vida — ele é o motivo de sorrisos, o coração que faz tudo ter
+            sentido, a companhia que transforma cada dia em especial. Ele é a
+            luz que ilumina seus momentos, a força que a inspira, a doçura que a
+            conforta e o amor que a move.
 
-            Aos 24 anos, Juliana carrega em si a beleza de quem ama com verdade,
-            cuida com intensidade e transforma a vida ao seu redor com pequenos
-            gestos de carinho. Davi não comemora apenas sua idade, mas celebra a
-            sorte imensa de ter ao seu lado a mulher que é, ao mesmo tempo, sua
-            melhor amiga, sua parceira, sua esposa do coração e sua eterna
-            paixão.
+            Em 5 anos, vocês construíram um amor verdadeiro, cheio de cuidado,
+            cumplicidade e pequenos gestos que fazem cada dia mais especial.
+            Juliana não comemora apenas esses anos juntos, mas celebra a sorte
+            imensa de ter ao lado o homem que é, ao mesmo tempo, seu melhor
+            amigo, seu parceiro, seu eterno amor e sua paixão sem fim.
 
-            Nesta história, ainda há cenas que não foram gravadas: o dia em que
-            acordarão lado a lado, as manhãs de café juntos, as noites de
-            filmes, os beijos sem hora para acabar e os abraços que nunca mais
-            vão precisar terminar. Mas o roteiro já está escrito — e o final
-            feliz está garantido.
+            Nesta história, ainda há muitos capítulos por escrever: as manhãs
+            compartilhadas, os abraços apertados, os beijos que parecem eternos
+            e todos os sonhos que ainda vão se realizar juntos. Mas o roteiro do
+            amor de vocês já é claro — e o final feliz está garantido.
 
-            Juliana, 24 anos. Davi, para sempre.
-            ❤️✨
+            Juliana e Davi, 5 anos de amor. ❤️✨
           </p>
 
           <div class="botoes">
@@ -131,19 +129,19 @@
 
         <div class="swiper-wrapper">
 
-          <div class="swiper-slide"><img src="../../../inserts/Foto1.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/Foto1.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto2.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto2.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto3.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto3.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto4.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto4.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto5.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto5.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto6.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto6.jpeg"
               alt></div>
-          <div class="swiper-slide"><img src="../../../inserts/foto9.jpeg"
+          <div class="swiper-slide"><img src="../../../../inserts/foto9.jpeg"
               alt></div>
 
         </div>
@@ -166,7 +164,7 @@
       crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
-    <script src="24Anos.js"></script>
+    <script src="5Anos.js"></script>
 
   </body>
 </html>
