--- a/pages/AniversariosNamoro/Aniversariosdenamoro.html
+++ b/pages/AniversariosNamoro/Aniversariosdenamoro.html
@@ -11,7 +11,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous">
 
-    <link rel="stylesheet" href="Aniversarios.css">
+    <link rel="stylesheet" href="Aniversariosdenamoro.css">
 
     <link
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
@@ -47,10 +47,8 @@
 
           <ul class="dropdown-menu">
             <li><a class="dropdown-item"
-                href="pages/Aniversarios.html">Aniverários</a></li>
-            <li><a class="dropdown-item"
-                href="../AniversariosNamoro/Aniversariosdenamoro.html">Aniversários
-                de
+                href="../Aniversario/Aniversarios.html">Aniverários</a></li>
+            <li><a class="dropdown-item" href="#">Aniversários de
                 Namoro</a></li>
             <li><a class="dropdown-item" href="#">Aniversários de
                 Casamento</a></li>
@@ -66,16 +64,16 @@
     <!--Conteúdo do Site-->
 
     <section class="lista-aniversarios">
-      <h2 class="titulo-lista">Todos os aniversários de Juliana</h2>
+      <h2 class="titulo-lista">Nossos Aniversários de Namoro</h2>
 
       <div id="aniversarios-container">
 
-        <a href="24Anos/24Anos.html" class="item-link">
+        <a href="5anos/5Anos.html" class="item-link">
           <div class="item-aniversario">
-            <img src="../../inserts/foto9.jpeg" alt="Juliana 24 anos">
+            <img src="../../inserts/foto9.jpeg" alt="5 Anos de namoro">
             <div class="info">
-              <h3>Temporada 24 - Juliana 24.0</h3>
-              <p>01 de Novembro de 2024</p>
+              <h3>Temporada 5</h3>
+              <p>20 de Agosto de 2025</p>
             </div>
           </div>
         </a>
@@ -83,16 +81,16 @@
         <div class="item-aniversario">
           <img src="../../inserts/Foto1.jpeg" alt="Juliana 23 anos">
           <div class="info">
-            <h3>Temporada 23 - Juliana 23.0</h3>
-            <p>01 de Novembro de 2023</p>
+            <h3>Temporada 4</h3>
+            <p>20 de Agosto de 2024</p>
           </div>
         </div>
 
         <div class="item-aniversario">
           <img src="../../inserts/Foto1.jpeg" alt="Juliana 22 anos">
           <div class="info">
-            <h3>Temporada 22 - Juliana 22.0</h3>
-            <p>01 de Novembro de 2022</p>
+            <h3>Temporada 3 </h3>
+            <p>20 de Agosto de 2023</p>
           </div>
         </div>
 
@@ -119,7 +117,7 @@
       crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
-    <script src="Aniversario.js"></script>
+    <script src="Aniversariodenamoro.js"></script>
 
   </body>
 </html>
